@@ -1,57 +1,0 @@
-Changes
-lib/HTTP/Body.pm
-lib/HTTP/Body/MultiPart.pm
-lib/HTTP/Body/OctetStream.pm
-lib/HTTP/Body/UrlEncoded.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/01use.t
-t/02pod.t
-t/03podcoverage.t
-t/04multipart.t
-t/05urlencoded.t
-t/06octetstream.t
-t/data/multipart/001-content.dat
-t/data/multipart/001-headers.yml
-t/data/multipart/001-results.yml
-t/data/multipart/002-content.dat
-t/data/multipart/002-headers.yml
-t/data/multipart/002-results.yml
-t/data/multipart/003-content.dat
-t/data/multipart/003-headers.yml
-t/data/multipart/003-results.yml
-t/data/multipart/004-content.dat
-t/data/multipart/004-headers.yml
-t/data/multipart/004-results.yml
-t/data/multipart/005-content.dat
-t/data/multipart/005-headers.yml
-t/data/multipart/005-results.yml
-t/data/multipart/006-content.dat
-t/data/multipart/006-headers.yml
-t/data/multipart/006-results.yml
-t/data/multipart/007-content.dat
-t/data/multipart/007-headers.yml
-t/data/multipart/007-results.yml
-t/data/multipart/008-content.dat
-t/data/multipart/008-headers.yml
-t/data/multipart/008-results.yml
-t/data/multipart/009-content.dat
-t/data/multipart/009-headers.yml
-t/data/multipart/009-results.yml
-t/data/multipart/010-content.dat
-t/data/multipart/010-headers.yml
-t/data/multipart/010-results.yml
-t/data/multipart/011-content.dat
-t/data/multipart/011-headers.yml
-t/data/multipart/011-results.yml
-t/data/octetstream/001-content.dat
-t/data/octetstream/001-headers.yml
-t/data/octetstream/001-results.dat
-t/data/octetstream/002-content.dat
-t/data/octetstream/002-headers.yml
-t/data/octetstream/002-results.dat
-t/data/urlencoded/001-content.dat
-t/data/urlencoded/001-headers.yml
-t/data/urlencoded/001-results.yml
